# sp500-rank-tracker

./: operation.txt  pyproject.toml
.github/workflows/: fetch.yml  pages.yml
data/: sp500_ranks.sqlite3
data/plots/: rank_plot_interactive_20251029T132019Z.html  rank_plot_interactive_20251105T143207Z.html  rank_plot_interactive_20251105T144545Z.html  rank_plot_interactive_20251105T151648Z.html
docs/: index.html  latest-100.html  latest-50.html
scripts/: cron_example.sh
src/sp500_rank_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sp500_tracker/: __init__.py  cli.py  core.py
src/sp500_tracker/templates/: interactive.html.j2
